kubernetes/fluxcd/apps/base/miniflux/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: miniflux-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: miniflux
      app.kubernetes.io/name: miniflux
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - protocol: TCP
          port: 10091
